--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -72,6 +73,13 @@
         <li><a href="http://github.com/santiagocujaban" target="_blank">GitHub</a></li>
         <li><a href="https://www.youtube.com/channel/UCqFgqTo6N-uFF_lnM2UIMvA" target="_blank">Youtube</a></li>
       </ul>
+    </footer>
+
+    <!--subfooter-->
+    <footer id="sub-footer">
+      <p>
+          &copy; <a href="" target="_blank">Santiago Cujaban C.</a>
+      </p>
     </footer>
 
     <!--scripts-->
