--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
   
       <!--buttonToGenerateHomeWorks-->
-      <input type="button" value="Agregar nueva tarea..." id="addbutton"/>
+      <input type="button" value="Agregar nueva tarea" id="addbutton"/>
     </div>
 
     <!--aboutthat-->
@@ -84,5 +84,6 @@
 
     <!--scripts-->
     <script src="script.js"></script>
+    
   <body/>
 <html/>
